# fastapi-clean-architecture

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: formatter.yml  pytest.yml
app/: main.py
app/api/v1/: routes.py
app/api/v2/: routes.py
app/core/: config.py  container.py  database.py  dependencies.py  exceptions.py  middleware.py  security.py
app/migrations/: env.py
app/migrations/versions/: 007c5c6572e1_init.py  94a8bd217c4a_init.py  c96507a67440_init.py  f84686cff6de_init.py
app/model/: base_model.py  post.py  post_model.py  post_tag.py  post_tag_model.py  tag.py  tag_model.py  user.py
app/models/: post_model.py  post_tag_model.py  tag_model.py  user.py  user_model.py
app/repositories/: __init__.py  base_repository.py  post_repository.py  tag_repository.py  user_repository.py
app/repository/: __init__.py  base_repository.py  post_repository.py  tag_repository.py  user_repository.py
app/schema/: auth_schema.py  base.py  base_schema.py  post_schema.py  post_tag_schema.py  tag_schema.py  user.py  user_schema.py
app/services/: __init__.py  auth_service.py  base_service.py  post_service.py  tag_service.py  user_service.py
app/util/: date.py  hash.py  query_builder.py  schema.py
app/utils/: date.py  schema.py
migrations/: env.py
migrations/versions/: c96507a67440_init.py
tests/: conftest.py
tests/e2e/: test_auth_router.py  test_client.py
tests/integration_tests/: test_auth_router.py
tests/test_data/: posts.json  users.json
tests/unit/: test_container.py
tests/unit_tests/: test_fixture.py
(+5 files in other folders)
