[tool.poetry]
name = "fastapi-clean-architecture"
version = "0.1.0"
description = ""
authors = ["jujumilk3 <jujumilk3@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.5"
fastapi = "^0.92.0"
sqlmodel = "^0.0.8"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
dependency-injector = "^4.41.0"
loguru = "^0.6.0"
anyio = "^3.6.2"
httpx = "^0.23.3"
passlib = "^1.7.4"
bcrypt = "^4.0.1"


[tool.poetry.group.dev.dependencies]
alembic = "^1.10.0"
isort = "^5.12.0"
black = "^23.1.0"
pytest-xdist = "^3.2.0"
pytest-cov = "^4.0.0"
coverage = "^7.2.1"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
